--- a/style.css
+++ b/style.css
@@ -321,4 +321,54 @@ body{
  .sec-cards .card .card-rating-count::after{
     content: ")";
 }
+/* web-feature */
+#web-cards{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 2em 0 5em 0;
+}
+#web-cards .web-card{
+    width: 20%;
+    justify-content: space-between;
+    align-items: center;
+}
+#web-cards .web-card p{
+    text-align: center;
+    font-weight: 500;
+    letter-spacing:1px;
+}
+#web-cards .web-card img{
+    width: 100%;
+    border-radius: 10% ;
+}
 
+/* web-selection */
+#web-selection #web-selection-container{
+    padding:10em;
+    padding-top:2em;
+    display: flex;
+    gap:5em;
+    justify-content:center;
+    align-items: center;
+}
+#web-selection #web-selection-container img{
+    width: 50%;
+}
+#web-selection #web-selection-container p{
+    width: 50%;
+}
+
+
+
+
+/* Custom Scroll */
+::-webkit-scrollbar {
+    width: 5px; 
+}
+  
+::-webkit-scrollbar-thumb {
+      background: var(--primary-color);
+      border-radius: 15px;
+      height: 10px;
+  }
