--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@
 .cursive-font{
     font-family: 'Zen Kurenaido', sans-serif !important; 
 }
-img{
+/* img{
     width: 100%;
-}
+} */
 *{
     margin: 0;
     padding: 0;
@@ -372,3 +372,40 @@ body{
       border-radius: 15px;
       height: 10px;
   }
+
+footer {
+    font-family: 'Zen Kurenaido', sans-serif;
+    padding-bottom:1rem;
+    background-color:var(--primary-color);
+    color: var(--primary-bg);
+    letter-spacing:1px;
+    font-size:1.2em;
+    
+}
+
+footer .footer-container{
+    display: flex;
+    justify-content:space-around;
+}
+footer a{
+    text-decoration: none;
+    color:inherit;
+}
+footer h2{
+    margin-top:1em;
+    margin-bottom:0.5em;
+}
+footer h3{
+    margin-bottom:1em;
+    
+}
+footer #footer-main h1{
+    margin-top:1em;
+    margin-bottom: 0.5em;
+}
+footer #footer-contact h3{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
