--- a/banner-style.css
+++ b/banner-style.css
@@ -3,44 +3,50 @@
     background-color: rgb(228, 87, 87);
     color: white;
     font-size: 2em;
-    position: relative;
-    /* height:500px; */
+    height:500px;
     display:flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    /* flex-direction: column; */
+    position: relative;
+
 }
 
+#banners #banner-conatiner{
+    position: relative;
+}
 
-#banners::after,
-#banners::before{
+.banner-btn:hover{
+    color:rgba(255, 255, 255, 0.493);
+    border:3px solid rgba(255, 255, 255, 0.493);
+}
+.banner-btn{
     display: inline-block;
-    padding:0.4em;
+    padding:24px;
     height:12px;
     width:12px;
     border-radius: 50%;
     border: 3px solid #fff;
+    color:#fff;
     font-size: 2em;
     z-index: 5;
     display:flex;
     align-items: center;
     justify-content: center;
+
     position: absolute;
     background-color: transparent;
-
 }
-#banners::before{
-    content:'\003C';
+#banner-left-btn{
     left: 50px;
 }
-#banners::after{
-    content:'\003E';
+#banner-right-btn{
     right: 50px;
 }
-
 #banners .banner {
-    /* position: absolute; */
-    /* top: 0; */
+    position: absolute;
+    top: 0;
+    left: 0;
     padding:2em 4em;
     display: flex;
     gap: 50px;
