Major Update nav and cards

--- a/banner-style.css
+++ b/banner-style.css
@@ -1,5 +1,5 @@
 #banners{
-    margin-bottom: 10em;
+    /* margin-bottom: 10em; */
     background-color: rgb(228, 87, 87);
     color: white;
     font-size: 2em;
