--- a/style.css
+++ b/style.css
@@ -24,14 +24,16 @@ body{
     /* font-family: 'Zen Kurenaido', sans-serif; */
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 62.5%;
+    position: relative;
 }
 #sec-banner {
     height: 100vh;
     background-color: var(--primary-bg);
-}
-#sec-banner nav{
-    position: fixed;
+} 
+#navbar{
+    position: sticky;
     top: 0;
+    left: 0;
     width: 100%;
     display: flex;
     align-items: center;
@@ -39,18 +41,21 @@ body{
     background-color: #fff;
     padding:1em 5em;
     box-shadow: 1px 1px 1px 1px #ccc;
+    z-index: 50;
 }
-#sec-banner #nav-links{
+#navbar #nav-links{
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap:20px;
 }
-#sec-banner a:hover{
+#navbar a:hover{
     color:var(--primary-color-hover)!important;
 }
 
-#sec-banner a{
+#navbar a,
+#sec-banner a
+{
     font-size:2em;
     color: var(--primary-color);
     display:flex;
@@ -58,19 +63,25 @@ body{
     gap:5px;
 }
 
-#sec-banner a svg{
+#navbar a svg{
     width: 30px;
 }
 
-#sec-banner #logo{
+#navbar #logo{
     font-size: 3em;
     color: var(--primary-color);
 }
 
 /* search */
 
+#search-sec {
+    /* width: fixed; */
+    margin:0 auto;
+    width: fit-content;
+}
 #search {
-    /*  */
+    display: inline-block;
+    margin-bottom: 5em;
     }
     #search form{
         border:1px solid var(--primary-color);
@@ -199,13 +210,20 @@ body{
 
 
 /* Helper */
-.sec-header  a{
+.sec-header  button:hover{
+    cursor:pointer;
+}
+.sec-header  button{
     display: inline-block;
     color: var(--primary-color);
     margin: 0 1em;
     padding-bottom:5px;
     font-weight: 700;
     letter-spacing:1px;
+    border: none;
+    background-color:transparent;
+    font-size: 1em;
+    font-family: 'Zen Kurenaido', sans-serif !important;
 }
 .sec-header .active{
     color: var(--primary-color-hover)!important;
@@ -227,6 +245,7 @@ body{
     padding:5em 10em;
     display: flex;
     align-items: center;
+    gap: 15px;
 }
  #toggle .arrow{
     display: inline-flex;
@@ -256,9 +275,10 @@ body{
 
  .sec-cards{
     display: flex;
-    gap: 40px;
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content:space-evenly;
+    width: 100%;
+    height: 400px ;
 }
  .sec-cards .card:hover{
     border: 2px solid var(--primary-color-hover);
@@ -268,7 +288,7 @@ body{
     display: flex!important;
  }
  .sec-cards .card{
-    width: 20%;
+    max-width: 20%;
     border: 2px solid #B1B1B1;
     font-size: 1.3em;
     display: flex;
@@ -277,13 +297,17 @@ body{
     padding:1em;
     border-radius: 5px;
     display: none;
+    overflow: hidden;
 }
  .sec-cards .card>span{
     margin-top:0.3em;
 }
+ .sec-cards .card .img{
+     max-height: 300px;
+ }
  .sec-cards .card img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit:cover;
 }
  .sec-cards .card .card-title{
