--- a/style/product.css
+++ b/style/product.css
@@ -32,7 +32,7 @@ font-family: 'Roboto Condensed', sans-serif;
     height: 100vh;
     background-color: rgba(85, 85, 85, 0.712);
     z-index: 50;
-    overflow: hidden;
+    overflow: scroll;
 
 }
 #product{
