--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,8 @@ body{
     background-color: #fff;
     box-shadow: 1px 1px 1px 1px #ccc;
     z-index: 50;
-    position: fixed;
+    position: sticky;
+    padding:0.5em 2em;
 }
 #navbar #nav-links a{
     position: relative;
@@ -68,7 +69,7 @@ body{
     position: absolute;
     z-index: 100;
     top: 100%;
-    right: 0;
+    right: -10px;
     background-color:#fff;
     /* min-width: 100px; */
     /* width:100%; */
@@ -109,7 +110,7 @@ body{
     display:flex;
     align-items: center;
     gap:5px;
-    padding:0.8em 0;
+    padding:0.5em 0;
     position: relative;
 }
 
@@ -403,7 +404,7 @@ body{
 
 }
  .sec-cards .card:nth-child(-n+4){
-    display: flex!important;
+    display: flex;
  }
  .sec-cards .card{
     max-width: 20%;
