burger menu added

--- a/style/media.css
+++ b/style/media.css
@@ -109,6 +109,9 @@
     #navbar a svg{
         width: 24px;
     }
+    #navbar #nav-link-category .icon{
+        display:inline-block !important;
+    }
     #navbar #nav-link-category{
         order: 5;
     }
